# NeuralNetwork

./: CMakeLists.txt  README.md  main.cpp
data/: plot_loss.py
src/: DataLoader.cpp  DataLoader.h  Layer.cpp  Layer.h  LossLandscape.cpp  LossLandscape.h  NeuralNetwork.cpp  NeuralNetwork.h  Neuron.cpp  Neuron.h  Visualizer.cpp  Visualizer.h
